Updated HTML, CSS and modified TS
Updated HTML, CSS and modified TS to add hide/unhide sections functionality in Resume.

--- a/index.html
+++ b/index.html
@@ -9,52 +9,65 @@
 <body>
     <div class="resume">
         <div class="left-column">
+            <button id="toggle-about" class="section-button">ABOUT ME</button>
             <div class="about">
-                <h3>About me</h3> 
                 <hr>
-                <p>I am a web developer, my vision is to be among the great developers. I have good command of HTML, CSS, JavaScript, React.js, Firebase, NodeJs and Office tools.</p>
+                <p>I am a web developer aspiring to be among the top in the field. Proficient in HTML, CSS, TypeScript, Next.js, Firebase, Node.js, and office tools.</p>
             </div>
+
+            <button id="toggle-education" class="section-button">EDUCATION</button>
             <div class="education">
-                <h3>Education</h3>
                 <hr>
-                <p>Virtual University of Pakistan <br> BS in Information Technology</p>
-                <p>Nabi Bagh Z.M Science College <br> Intermediate in Pre-Engineering</p>
-                <p>Fairyland Secondary School <br> Matric in Science</p>
+                <h5 class="VU">Virtual University of Pakistan </h5> <p> BS in Information Technology </p>
+                <h5 class="Nabi">Nabi Bagh Z.M Science College </h5> <p> Intermediate in Pre-Engineering </p>
+                <h5 class="Fairyland">Fairyland Secondary School </h5> <p> Matric in Science </p>
             </div>
+
+            <button id="toggle-contact" class="section-button">CONTACT</button>
             <div class="contact">
-                <h3>Contact</h3>
                 <hr>
                 <p>0344-2554294 <br> iby.khan7@gmail.com</p>
             </div>
+
+            <button id="toggle-address" class="section-button">ADDRESS</button>
             <div class="address">
-                <h3>Address</h3> 
                 <hr>
                 House No 203, Al Yasir Manzil (Masjid Abdul Wahab), Kambela Chowk, Keamari, Karachi.
             </div>
         </div>
         <div class="right-column">
             <div class="name">
-            <h1>Muhammad Ibrahim</h1>
-            <h4>Full Stack Developer</h4>
-        </div>
-        <div class="work-experience">
-            <h3>Work Experience</h3> 
-            <hr>
-            <h4>Zam Zam Public School / Jan 2014 - present</h4>
-            <h3>IT Assistant</h3>
-            <p>Troubleshooting hardware and software issues, installing and configuring hardware and software, maintaining systems,training users, creating and maintaining documentation, managing data backups and disaster recovery, collaborating with IT team members, and researching newtechnology.</p>
-        </div>
-        <div class="skills">
-            <h3>Skills</h3> 
-            <hr>
-            HTML / CSS <br>
-            JavaScript <br>
+                <h1>MUHAMMAD IBRAHIM</h1>
+                <h4>FULL STACK DEVELOPER</h4>
+            </div>
+            <button id="toggle-work" class="section-button">WORK EXPERIENCE</button>
+            <div class="work-experience">
+                <hr>
+                <h5>Zam Zam Public School / Jan 2014 - present</h5>
+                <h4>IT Assistant</h4>
+                <p>Troubleshooting hardware and software issues, installing and configuring hardware and software, maintaining systems, training users, creating and maintaining documentation, managing data backups and disaster recovery, collaborating with IT team members, and researching new technology.</p>
+            </div>
 
-        </div>
-
+            <button id="toggle-skills" class="section-button">SKILLS</button>
+            <div class="skills">  
+                <li>
+                    <p>HTML</p><span class="bar"><span class="html"></span></span> 
+                </li>
+                <li>
+                    <p>CSS</p><span class="bar"><span class="css"></span></span>
+                </li>
+                <li>
+                    <p>TypeScript</p><span class="bar"><span class="typescript"></span></span>
+                </li>
+                <li>
+                    <p>NextJS</p><span class="bar"><span class="nextjs"></span></span>
+                </li>
+                <li>
+                    <p>NodeJS</p><span class="bar"><span class="nodejs"></span></span>
+                </li>
+            </div>
         </div>
     </div>
-
+    <script src="app.js"></script>
 </body>
-<script src="app.ts"></script>
 </html>
