--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button id="toggle-about" class="section-button">ABOUT ME</button>
             <div class="about">
                 <hr>
-                <p>I am a web developer aspiring to be among the top in the field. Proficient in HTML, CSS, TypeScript, Next.js, Firebase, Node.js, and office tools.</p>
+                <p>I am a web developer aspiring to be among the top in the field. Proficient in HTML, CSS, TypeScript, Next.js, Node.js, and office tools.</p>
             </div>
 
             <button id="toggle-education" class="section-button">EDUCATION</button>
